<resources>
    <string name="app_name">SpacECE</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_india">India</string>
    <string name="text_foundation">Foundation</string>
    <string name="text_spacece_email">info@spacece.org</string>
    <string name="text_spacece_phone">+91 9096305648</string>
    <string name="text_spacece_address">SpacECE India Foundation, New Delhi</string>
    <string name="text_spacece_website">https://www.spacece.co</string>
    <string name="text_spacece_operating_hour">Mon-Sat: 9:00 AM - 6:00 PM</string>
    <string name="text_parent">Parent</string>
    <string name="text_admin">Admin</string>
    <string name="text_select_your_role">Select your role to continue\nyour journey with us</string>
    <string name="text_track_your_child">Track your child’s\ndevelopment</string>
    <string name="text_manage_and_oversee">Manage &amp; oversee\noperations</string>
    <string name="text_continue_as_guest">Continue as Guest</string>
    <string name="text_login_as_parent">Login as Parent</string>
    <string name="text_login_as_admin">Login as Admin</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_don_t_have_an_account">#c1Don’t have an account?#c1 #c2Register#c2</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_other_options">other options</string>
    <string name="text_please_enter_email">Please enter Email!</string>
    <string name="text_invalid_email">Invalid Email!</string>
    <string name="text_please_enter_password">Please enter Password!</string>
    <string name="text_invalid_password">Invalid Password!</string>
    <string name="text_email_is_not_registered">Email is not registered!</string>
    <string name="text_wrong_password">Wrong Password!</string>
    <string name="text_signup_as_parent">Signup as Parent</string>
    <string name="text_name">Name</string>
    <string name="text_signup">Signup</string>
    <string name="text_already_have_an_account">#c1Already have an account?#c1 #c2Login#c2</string>
    <string name="text_please_enter_name">Please enter Name!</string>
    <string name="text_please_enter_phone">Please enter Phone!</string>
    <string name="text_invalid_phone">Invalid Phone!</string>
    <string name="text_please_confirm_password">Please confirm Password!</string>
    <string name="text_password_not_matched">Password didn’t match!</string>
    <string name="text_weak_password">Password must be at least 8 characters long and include one uppercase, one lowercase, one number, and one special character (A\-Z,a\-z,0\-9,@,$,#,&amp; etc).</string>
    <string name="text_signup_as_admin">Signup as Admin</string>
    <string name="text_enter_your_email">Enter your Email or Phone, we will send you a verification link</string>
    <string name="text_or">Or</string>
    <string name="text_phone">Phone</string>
    <string name="text_send">Send</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_we_have_confirmed">We have confirmed that it’s you! Please set a new password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_save">Save</string>
    <string name="text_home">Home</string>
    <string name="text_programs">Programs</string>
    <string name="text_support">Support</string>
    <string name="text_support_us">Support Us</string>
    <string name="text_contact">Contact</string>
    <string name="text_my_profile">My Profile</string>
    <string name="text_about_us">About Us</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_terms_n_conditions">Terms &amp; Conditions</string>
    <string name="text_help">Help &amp; Support</string>
    <string name="text_logout">Logout</string>
    <string name="text_our_offerings">Our Offerings</string>
    <string name="text_lib_for_small">Lib for Small</string>
    <string name="text_interactive_books">Interactive books and learning materials</string>
    <string name="text_consult_us">Consult Us</string>
    <string name="text_book_appointments">Book appointments with childcare experts</string>
    <string name="text_child_management">Child Management</string>
    <string name="text_child_progress">Progress monitoring &amp; Milestone tracker</string>
    <string name="text_space_tube">SpaceTube</string>
    <string name="text_a_video_library">A video library with educational content.</string>
    <string name="text_make_a_difference">Make a Difference</string>
    <string name="text_join_our_community">Join our community of volunteers and help us create positive change in children’s lives.</string>
    <string name="text_join_us_as_volunteer">Join us as Volunteer</string>
    <string name="text_volunteer_opportunities">Volunteer Opportunities</string>
    <string name="text_volunteering_is_a_work">Volunteering is a work of Heart!</string>
    <string name="text_fundraising_volunteer">Fundraising Volunteer</string>
    <string name="text_support_education_healthcare">Support children’s education, healthcare &amp; well-being</string>
    <string name="text_roles_n_responsibilities">Roles &amp; Responsibilities:</string>
    <string name="text_events">Events</string>
    <string name="text_donor_outreach">Donor Outreach</string>
    <string name="text_social_media">Social Media</string>
    <string name="text_relations">Relations</string>
    <string name="text_time_commitment">Time Commitment:</string>
    <string name="text_flexible_few_hours">Flexible, few hours/week or event-based</string>
    <string name="text_perks">Perks:</string>
    <string name="text_skills">Skills</string>
    <string name="text_networking">Networking</string>
    <string name="text_certificate">Certificate</string>
    <string name="text_make_an_impact">Make an Impact</string>
    <string name="text_teaching_assistant">Teaching Assistant</string>
    <string name="text_support_learning_afterschool">Support children’s learning &amp; afterschool activities</string>
    <string name="text_homework">Homework</string>
    <string name="text_reading">Reading</string>
    <string name="text_math_english_science">Math, English &amp; Science</string>
    <string name="text_group_support">Group &amp; 1:1 support</string>
    <string name="text_hours_per_week_flexible">2–4 hours per week, flexible.</string>
    <string name="text_teaching_mentoring_skills">Teaching &amp; mentoring skills</string>
    <string name="text_confidence">Confidence</string>
    <string name="text_direct_impact">Direct impact</string>
    <string name="text_event_organizer">Event Organizer</string>
    <string name="text_plan_manage_events">Plan &amp; manage NGO events: awareness drives, health camps, cultural programs</string>
    <string name="text_logistics">Logistics</string>
    <string name="text_volunteer_vendor_coordination">Volunteer &amp; Vendor Coordination</string>
    <string name="text_execution_reporting">Execution &amp; Reporting</string>
    <string name="text_event_based_weekends">Event-based, usually weekends.</string>
    <string name="text_event_management_experience">Event management experience</string>
    <string name="text_leadership">Leadership</string>
    <string name="text_appreciation">Appreciation</string>
    <string name="text_social_media_volunteer">Social Media Volunteer</string>
    <string name="text_promote_ngos_mission">Promote the NGO’s mission online</string>
    <string name="text_content_creation">Content Creation</string>
    <string name="text_campaigns">Campaigns</string>
    <string name="text_engagement">Engagement</string>
    <string name="text_awareness">Awareness</string>
    <string name="text_flexible_remote_possible">Flexible Remote possible</string>
    <string name="text_digital_marketing_skills">Digital marketing skills</string>
    <string name="text_creativity">Creativity</string>
    <string name="text_amplify_impact">Amplify Impact</string>
    <string name="text_why_volunteer_with_us">Why Volunteer With Us?</string>
    <string name="text_make_a_real_impact">Make a Real Impact</string>
    <string name="text_learn_and_grow">Learn &amp; Grow</string>
    <string name="text_connect_and_network">Connect &amp; Network</string>
    <string name="text_find_purpose">Find Purpose</string>
    <string name="text_children_received_education">children received free education last year</string>
    <string name="text_meals_served_support">meals served with volunteer support</string>
    <string name="text_200">200+</string>
    <string name="text_volunteers_joined_our_cause">volunteers joined our cause in the past year</string>
    <string name="text_benefits">Benefits</string>
    <string name="text_learn_teaching_leadership">Learn teaching, leadership &amp; communication.</string>
    <string name="text_certificates_volunteer_appreciation">Certificates &amp; volunteer appreciation.</string>
    <string name="text_meet_inspiring_peers">Meet inspiring peers &amp; mentors.</string>
    <string name="text_experience_the_joy">Experience the joy of making lives better.</string>
    <string name="text_choose_your_role">Choose Role</string>
    <string-array name="array_volunteer_roles">
        <item>Choose Role</item>
        <item>@string/text_events</item>
        <item>@string/text_donor_outreach</item>
        <item>@string/text_social_media</item>
        <item>@string/text_relations</item>
        <item>@string/text_homework</item>
        <item>@string/text_reading</item>
        <item>@string/text_math_english_science</item>
        <item>@string/text_group_support</item>
        <item>@string/text_logistics</item>
        <item>@string/text_volunteer_vendor_coordination</item>
        <item>@string/text_execution_reporting</item>
        <item>@string/text_content_creation</item>
        <item>@string/text_campaigns</item>
        <item>@string/text_engagement</item>
        <item>@string/text_awareness</item>
    </string-array>
    <string name="text_submit">Submit</string>
    <string name="text_volunteer_experiences">Volunteer Experiences</string>
    <string name="text_volunteer">Volunteer</string>
    <string name="text_the_more_we_share">The more we Share, the more we have..\.</string>
    <string name="text_community_chat">Community Chat</string>
    <string name="text_community_chat_and_share">Chat and share information with other parent along with photos, videos, documents</string>
    <string name="text_community_care">Community Care</string>
    <string name="text_working_with_local">Working with local communities. Supporting children’s education, health.</string>
    <string name="text_parent_support">Parent Support</string>
    <string name="text_simple_tools_and_tips">Simple tools and tips for parents. Helping them guide their child’s growth.</string>
    <string name="text_parents_reviews">Parents Reviews</string>
    <string name="text_please_share_your_review">Please share your valuable review of our app and rate your experience</string>
    <string name="text_our_impact">Our Impact</string>
    <string name="text_your_support">Your support makes\na difference</string>
    <string name="text_donate_us">Donate Us</string>
    <string name="text_5000_">₹ 5,000</string>
    <string name="text_10000_">₹ 10,000</string>
    <string name="text_15000_">₹ 15,000</string>
    <string name="text_20000_">₹ 20,000</string>
    <string name="text_personal_information">Personal Information</string>
    <string name="text_amount">Amount</string>
    <string name="text_proceed_to_pay">Proceed to Pay</string>
    <string name="text_rate_us">Rate Us</string>
    <string name="text_tell_us_about">Tell us about your experience</string>
    <string name="text_write_your_review">Write your Review</string>
    <string name="text_post">Post</string>
</resources>