<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_right_round_solid_stroke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@drawable/bg_right_round_solid_stroke"
        android:backgroundTint="@color/color_ternary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/gradient_accent_light_circle"
            android:backgroundTint="@color/color_primary"
            android:elevation="@dimen/_2sdp"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_user"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:ellipsize="end"
            android:fontFamily="@font/font_poppins_semibold"
            android:maxLines="3"
            android:text="@string/text_welcome"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_profile"
            style="@style/StyleDrawerMenuItem"
            android:paddingTop="@dimen/_24sdp"
            android:text="@string/text_my_profile" />

        <TextView
            android:id="@+id/tv_about_us"
            style="@style/StyleDrawerMenuItem"
            android:text="@string/text_about_us" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            style="@style/StyleDrawerMenuItem"
            android:text="@string/text_privacy_policy" />

        <TextView
            android:id="@+id/tv_tnc"
            style="@style/StyleDrawerMenuItem"
            android:text="@string/text_terms_n_conditions" />

        <TextView
            android:id="@+id/tv_help_support"
            style="@style/StyleDrawerMenuItem"
            android:text="@string/text_help" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_auth"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/_24sdp"
        android:background="@drawable/gradient_accent_dark_round"
        android:backgroundTint="@color/color_ternary">

        <ImageView
            android:id="@+id/iv_auth"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@drawable/gradient_accent_light_circle"
            android:backgroundTint="@color/color_primary"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_user"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_auth"
            android:ellipsize="end"
            android:fontFamily="@font/font_poppins"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/text_login"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12ssp" />
    </RelativeLayout>
</LinearLayout>
