<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_primary_down">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_back"
                style="@style/StyleCircleIcon"
                android:src="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <include
                android:id="@+id/layout_header"
                layout="@layout/layout_auth_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_header"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_32sdp"
                android:background="@drawable/bg_full_round_solid_stroke"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/gradient_accent_light_circle"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_password"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/font_poppins_bold"
                    android:text="@string/text_forgot_password"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/font_poppins"
                    android:gravity="center"
                    android:text="@string/text_enter_your_email"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_edt_email"
                    style="@style/StyleCustomTextInputLayout"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_edt_email"
                        style="@style/StyleCustomTextInputEditText"
                        android:drawableStart="@drawable/ic_email"
                        android:hint="@string/text_email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:fontFamily="@font/font_poppins"
                    android:gravity="center"
                    android:text="@string/text_or"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_edt_phone"
                    style="@style/StyleCustomTextInputLayout"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_edt_phone"
                        style="@style/StyleCustomTextInputEditText"
                        android:drawableStart="@drawable/ic_phone"
                        android:hint="@string/text_phone"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:maxLength="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    style="@style/StyleCustomButton"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:text="@string/text_send" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>